--- a/index.html
+++ b/index.html
@@ -47,20 +47,11 @@
         <p>Haspera - Havenza is a leading global consultancy firm that specializes in helping clients navigate the complex and ever-changing business landscape. Our team of experienced professionals provide tailored solutions that empower our clients to achieve their goals.</p>
         <a href="#" class="btn btn-dark">Explore Services</a>
         <a href="#" class="btn btn-outline-dark">Contact Us</a>
-
-        <!-- Decorative Circles -->
-        <!-- <div class="circle-green" style="z-index: 999;"></div>
-        <div class="circle-yellow" style="z-index: 999;"></div> -->
     </section>
 
-    <!-- Unlock Potential Section -->
     <section class="unlock-section">
-        <h2>Unlock Your</h2>
-        <h2>Potential with</h2>
+        <h2>Unlock Your Potential with</h2>
         <p>At Haspera - Havenza, we believe that every business holds the keys to transformative growth.</p>
-
-        <!-- Large Yellow Circle Decoration -->
-        <!-- <div class="circle-large-yellow"></div> -->
     </section>
 
     <section class="card-section-first">
